feat: add weather icons + colored criteria (wind/cloud/visibility)

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "moment": "^2.23.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "suncalc": "^1.8.0"
+    "suncalc": "^1.8.0",
+    "utils": "^0.3.1"
   }
 }
