--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "@reach/router": "^1.1.1",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-file-loader": "^1.1.1",
     "babel-plugin-transform-assets": "^1.0.2",
     "dark-sky-api": "^0.6.32",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "images": "^3.0.1",
     "moment": "^2.23.0",
